# CppTarkov

./: CMakeLists.txt
Example/: CMakeLists.txt
Example/src/: main.cpp
TarkovAPI/: CMakeLists.txt
TarkovAPI/src/: Auth.hpp  BasicLog.hpp  Constants.hpp  Exception.hpp  Hwid.hpp  LogHelper.cpp  LogHelper.hpp  StashHelper.hpp  TarkovAPIManager.cpp  TarkovAPIManager.hpp
TarkovAPI/test/: ApiManagerTest.cpp  CMakeLists.txt  Common.hpp  GameApiTest.cpp  HwidGeneratorTest.cpp  LauncherTest.cpp
